--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -17,13 +17,14 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@apollo/react-hooks": "^4.0.0",
-    "@eth-optimism/sdk": "^1.0.0",
     "@chakra-ui/icons": "^2.0.1",
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@eth-optimism/sdk": "^1.0.0",
     "@portis/web3": "^4.0.5",
     "@ramp-network/ramp-instant-sdk": "^2.2.0",
+    "@skalenetwork/filestorage.js": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
@@ -38,7 +39,7 @@
     "axios": "^0.25.0",
     "bl": "^5.0.0",
     "bnc-notify": "^1.5.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.2",
     "eth-hooks": "2.3.16",
     "ethers": "^5.4.1",
     "fortmatic": "^2.2.1",
